--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run footballenatore:serve-ssr",
+    "serve:ssr": "node dist/footballenatore/server/main.js",
+    "build:ssr": "ng build --prod && ng run footballenatore:server:production",
+    "prerender": "ng run footballenatore:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +22,13 @@
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
+    "@angular/platform-server": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@nguniversal/express-engine": "^11.0.0",
+    "cannon": "^0.6.2",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
+    "three": "^0.123.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -27,6 +36,9 @@
     "@angular-devkit/build-angular": "~0.1100.1",
     "@angular/cli": "~11.0.1",
     "@angular/compiler-cli": "~11.0.0",
+    "@nguniversal/builders": "^11.0.0",
+    "@types/cannon": "^0.1.5",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
